# turnkey-netinfo

./: .gitignore  pyproject.toml  setup.py
debian/: control
netinfo/: __init__.py
